--- a/tempdir/Dockerfile
+++ b/tempdir/Dockerfile
@@ -100,3 +100,10 @@ COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
 CMD python /home/myapp/attendance_register.py
+From python
+RUN pip install flask
+COPY ./static /home/myapp/static/
+COPY ./templates /home/myapp/templates/
+COPY attendance_app.py /home/myapp/
+EXPOSE 5000
+CMD python /home/myapp/attendance_register.py
