--- a/tempdir/Dockerfile
+++ b/tempdir/Dockerfile
@@ -2,108 +2,62 @@ From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
-COPY attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY Attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY ./attendance_register.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-COPY Attendance_register.py /home/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
-CMD python /home/myapp/attendance_register.py
-From python
-RUN pip install flask
-COPY ./static /home/myapp/static/
-COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
-CMD python /home/myapp/attendance_register.py
+EXPOSE 5000
+CMD python /home/myapp/attendance_app.py
 From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
-CMD python /home/myapp/attendance_register.py
+CMD python /home/myapp/attendance_app.py
 From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
-CMD python /home/myapp/attendance_register.py
+CMD python /home/myapp/attendance_app.py
 From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
-CMD python /home/myapp/attendance_register.py
+CMD python /home/myapp/attendance_app.py
 From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
-CMD python /home/myapp/attendance_register.py
+CMD python /home/myapp/attendance_app.py
 From python
 RUN pip install flask
 COPY ./static /home/myapp/static/
 COPY ./templates /home/myapp/templates/
 COPY attendance_app.py /home/myapp/
 EXPOSE 5000
-CMD python /home/myapp/attendance_register.py
+CMD python /home/myapp/attendance_app.py
+From python
+RUN pip install flask
+COPY ./static /home/myapp/static/
+COPY ./templates /home/myapp/templates/
+COPY attendance_app.py /home/myapp/
+EXPOSE 5000
+CMD python /home/myapp/attendance_app.py
+From python
+RUN pip install flask
+COPY ./static /home/myapp/static/
+COPY ./templates /home/myapp/templates/
+COPY attendance_app.py /home/myapp/
+EXPOSE 5000
+CMD python /home/myapp/attendance_app.py
+From python
+RUN pip install flask
+COPY ./static /home/myapp/static/
+COPY ./templates /home/myapp/templates/
+COPY attendance_app.py /home/myapp/
+EXPOSE 5000
+CMD python /home/myapp/attendance_app.py
